# iv-woe-filter

./: .gitignore  FolderStructure.md  LICENCE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/iv_woe_filter/: __init__.py  binning.py  iv_woe_filter.py  metrics.py  plots.py  validation.py  woe.py
src/tests/: test_iv_woe_filter.py
tests/: conftest.py  test_artifacts_and_psi.py  test_binning_behavior.py  test_fit_transform.py  test_iv_woe_filter.py  test_metrics.py  test_single_class_target.py  test_tree_binning.py  test_validation_and_selection.py
