[project]
name = "iv-woe-filter"
version = "0.1.1"
description = "Financial-grade IV/WOE feature selection and encoding for credit risk modeling"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
authors = [
    {name = "Dilshod A'zamjonov", email = "dilshod1526@gmail.com"}
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "tqdm>=4.67.0",
    "twine>=6.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
